; ModuleID = '/home/carl/AnghaBench/ish/tools/extr_ptutil.c_pt_readn.c'
source_filename = "/home/carl/AnghaBench/ish/tools/extr_ptutil.c_pt_readn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEEK_SET = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"read seek\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"read read\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pt_readn(i32 %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @open_mem(i32 %10)
  store i32 %11, i32* %9, align 4
  %12 = load i32, i32* %9, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @SEEK_SET, align 4
  %15 = call i32 @lseek(i32 %12, i32 %13, i32 %14)
  %16 = call i32 @trycall(i32 %15, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %17 = load i32, i32* %9, align 4
  %18 = load i8*, i8** %7, align 8
  %19 = load i64, i64* %8, align 8
  %20 = call i32 @read(i32 %17, i8* %18, i64 %19)
  %21 = call i32 @trycall(i32 %20, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @close(i32 %22)
  ret void
}

declare dso_local i32 @open_mem(i32) #1

declare dso_local i32 @trycall(i32, i8*) #1

declare dso_local i32 @lseek(i32, i32, i32) #1

declare dso_local i32 @read(i32, i8*, i64) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
